--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,18 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div class="nav-bar">
+           <ul class="nav-bar-list">
+                <a href="">Home<a>
+                <a href="">Menu<a>
+                <a href="">About Us<a>
+                <a href="">Gallery<a>         
+                <a href="">Contacts<a>    
+           </ul>               
+        </div>
 
     </body>
 </html>
