--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
+        <link href="./style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
     </head>
     <body>
         <div class="nav-bar">
