--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="./style.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
-    </head>
-    <body>
-        <div class="nav-bar">
-           <ul class="nav-bar-list">
-                <a href="">Home<a>
-                <a href="">Menu<a>
-                <a href="">About Us<a>
-                <a href="">Gallery<a>         
-                <a href="">Contacts<a>    
-           </ul>               
-        </div>
 
-    </body>
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
+</head>
+
+<body>
+    <div class="header">
+
+        <div class="logo">
+          <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
+        </div>
+        
+        <div class="nav-bar">
+            <ul>
+                <a class="elemento-lista" href="">Home<a>
+                        <a class="elemento-lista" href="">Menu<a>
+                                <a class="elemento-lista" href="">About Us<a>
+                                        <a class="elemento-lista" href="">Gallery<a>
+                                                <a class="elemento-lista" href="">Contacts<a>
+            </ul>
+        </div>
+        
+      </div>
+</body>
+
 </html>
+
