--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,9 @@
         </div>
         
       </div>
+    <div class="container-immagine">
+        <img class="immagine-home" src="./Assets/Images/home.jpg">
+    </div>
 </body>
 
 </html>
