--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,8 @@
         
       </div>
     <div class="container-immagine">
-        <img class="immagine-home" src="./Assets/Images/home.jpg">
+        <div class="text-image">SPAN</div>
+        <img class="immagine-home" src="./Assets/Images/home.jpeg">
     </div>
 </body>
 
