--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
                                                 <a class="elemento-lista" href="">Contacts<a>
             </ul>
         </div>
+
+        <div class="lingua">
+            <input type="button" value="EN"> <input type="button" value="IT">
+        </div>
         
       </div>
     <div class="container-immagine">
