--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="lingua">
-            <input type="button" value="EN"> <input type="button" value="IT">
+            <input type="button" value="EN" class="button"> <input type="button" value="IT" class="button">
         </div>
         
       </div>
