--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       </div>
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
-        <img class="immagine-home" src="./Assets/Images/home.jpeg">
+        <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
 </body>
 
