--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
       </div>
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
+        <div class="sottotitolo">Contacts</div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
 </body>
