--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
         <div class="sottotitolo">Contacts</div>
+        <div class="sottotitolo-ovale"></div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
 </body>
