--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
+    <script type="text/javascript" src="./script.js"></script>
+
 </head>
 
 <body>
@@ -19,10 +21,10 @@
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" href="">Home<a>
-                        <a class="elemento-lista" href="">Menu<a>
-                                <a class="elemento-lista" href="">About Us<a>
-                                        <a class="elemento-lista" href="">Gallery<a>
-                                                <a class="elemento-lista" href="">Contacts<a>
+                        <a data_translate="Menù" class="elemento-lista" href="">Menù<a>
+                                <a data_translate="About Us" class="elemento-lista" href="">La nostra storia<a>
+                                        <a data_translate="Gallery" class="elemento-lista" href="">Gallery<a>
+                                                <a data_translate="Contact Us" class="elemento-lista" style ="color: #5C6B5F;" href="">Contatti<a>
             </ul>
         </div>
 
@@ -33,10 +35,20 @@
       </div>
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
-        <div class="sottotitolo">Contacts</div>
+        <div class="sottotitolo">Contatti</div>
         <div class="sottotitolo-ovale"></div>
+        <div> <img class="freccia" src="./Assets/Images/freccia.png"> </div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
+
+    <div class="location">
+        <ul>
+            <a class="elemento-lista" href="">GOITO<a>
+                    <a class="elemento-lista" href="">MASSARENTI<a>
+                            <a class="elemento-lista" href="">LAURA BASSI<a>
+        </ul>
+    </div>
+
 </body>
 
 </html>
