--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,17 @@
     </div>
 
     <div class="location">
-        <div class="goito">
+        <div class="goito-container">
             GOITO
         </div>
 
-        <div class="massarenti">
+        <div class="massarenti-container">
             MASSARENTI
         </div>
         
-        <div class="laurabassi">
+        <div class="laurabassi-container">
             LAURABASSI
+            <!-- <a href="">LAURABASSI</a> -->
         </div>
     </div>
 
