--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,14 @@
         <div class="sub-info-container">
             <div class="image-container">
                 <section id="main-carousel" class="splide" aria-label="My Awesome Gallery">
-                  
+                  <div class="splide__arrows">
+                    <button class="splide__arrow splide__arrow--prev">
+                      Prev
+                    </button>
+                    <button class="splide__arrow splide__arrow--next">
+                      Next
+                    </button>
+                  </div>
                     <div class="splide__track">
                       <ul class="splide__list">
                         <li class="splide__slide">
@@ -79,6 +86,8 @@
               <div class="indirizzo-ovale"></div>
               <div class="orari">Orari</div>
               <div class="orari-ovale"></div>
+              <div class="telefono">Telefono</div>
+              <div class="telefono-ovale"></div>
             </div>
         </div>
         <div class="map-container">
