--- a/contact.html
+++ b/contact.html
@@ -58,14 +58,6 @@
         <div class="sub-info-container">
             <div class="image-container">
                 <section id="main-carousel" class="splide" aria-label="My Awesome Gallery">
-                  <div class="splide__arrows">
-                    <button class="splide__arrow splide__arrow--prev">
-                      Prev
-                    </button>
-                    <button class="splide__arrow splide__arrow--next">
-                      Next
-                    </button>
-                  </div>
                     <div class="splide__track">
                       <ul class="splide__list">
                         <li class="splide__slide">
@@ -81,13 +73,13 @@
                     </div>
                   </section>
             </div>
-            <div class="contacts-container">
-              <div class="indirizzo">Indirizzo</div>
-              <div class="indirizzo-ovale"></div>
+            <!--<div class="contacts-container">
+              <div class="nome-pizzeria">PIZZERIA A BOLOGNA GOITO</div>
+              <div> <img class="indirizzo-icon" src="./Assets/Images/posizione.png"></div>
+              <div class="indirizzo"></div>
               <div class="orari">Orari</div>
-              <div class="orari-ovale"></div>
               <div class="telefono">Telefono</div>
-              <div class="telefono-ovale"></div>
+            -->
             </div>
         </div>
         <div class="map-container">
