--- a/contact.html
+++ b/contact.html
@@ -73,13 +73,16 @@
                     </div>
                   </section>
             </div>
-            <!--<div class="contacts-container">
-              <div class="nome-pizzeria">PIZZERIA A BOLOGNA GOITO</div>
+            <div class="contacts-container">
+              <!--<div class="nome-pizzeria">PIZZERIA A BOLOGNA GOITO</div>-->
+              <div class="indirizzo">Indirizzo</div>
+              <div class="indirizzo-ovale"></div>
               <div> <img class="indirizzo-icon" src="./Assets/Images/posizione.png"></div>
-              <div class="indirizzo"></div>
-              <div class="orari">Orari</div>
-              <div class="telefono">Telefono</div>
-            -->
+              <div class="indirizzo-via">Bologna, Italia</nav></div>
+              <div class="indirizzo-via" style="top: 115.5vh; font-size: 1.5vh;">Via Goito, 3g</nav></div>
+              <!--<div class="orari">Orari</div>
+              <div class="telefono">Telefono</div>-->
+            
             </div>
         </div>
         <div class="map-container">
