--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         
         <div class="nav-bar">
             <ul>
-                <a class="elemento-lista" href="">Homes<a>
+                <a class="elemento-lista" href="">Home<a>
                         <a data_translate="Menù" class="elemento-lista" href="">Menù<a>
                                 <a data_translate="About Us" class="elemento-lista" href="">La nostra storia<a>
                                         <a data_translate="Gallery" class="elemento-lista" href="">Gallery<a>
