--- a/contact.html
+++ b/contact.html
@@ -42,15 +42,14 @@
     </div>
 
     <div class="location">
-        <div>
+        <div class="location-text">
             GOITO
         </div>
-        <div>
+        <div class="location-text">
             MASSARENTI
         </div>
-        <div>
+        <div class="location-text">
             LAURA BASSI
-
         </div>
     </div>
 
@@ -85,7 +84,7 @@
                 </div>
                 <div class="opening-time">
                   <div class="time-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div>
-                  <div class="time-text">Dal lunedì al venerdi 19-00 <br><br> Sabato e domenica 12-15, 19-00</div>
+                  <div class="time-text">Pranzo:<br><br>Sabato e domenica dalle 12 alle 15 <br><br>Cena:<br><br>Tutti i giorni dalle 19 alle 24 </div>
                 </div>
             </div>
         </div>
