--- a/contact.html
+++ b/contact.html
@@ -42,17 +42,16 @@
     </div>
 
     <div class="location">
-        <div>
-            GOITO
-        </div>
-        <div>
-            MASSARENTI
-        </div>
-        <div>
-            LAURABASSI
-
-        </div>
-    </div>
+      <div class="location-text">
+          GOITO
+      </div>
+      <div class="location-text">
+          MASSARENTI
+      </div>
+      <div class="location-text">
+          LAURA BASSI
+      </div>
+  </div>
 
     <div class="info-location">
         <div class="sub-info-container">
@@ -74,15 +73,30 @@
                   </section>
             </div>
             <div class="contacts-container">
-              <!--<div class="nome-pizzeria">PIZZERIA A BOLOGNA GOITO</div>-->
-              <div class="indirizzo">Indirizzo</div>
-              <div class="indirizzo-ovale"></div>
-              <div> <img class="indirizzo-icon" src="./Assets/Images/posizione.png"></div>
-              <div class="indirizzo-via">Bologna, Italia</nav></div>
-              <div class="indirizzo-via" style="top: 115.5vh; font-size: 1.5vh;">Via Goito, 3g</nav></div>
-              <!--<div class="orari">Orari</div>
-              <div class="telefono">Telefono</div>-->
-            
+              <div class="Title">PIZZERIA A BOLOGNA GOITO</div>
+              <div class="indirizzo">
+                <div class="indirizzo-icona"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-home"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg></div>
+                <div class="indirizzo-testi">
+                  <div class="indirizzo-testo">Bologna, Italia</div>
+                  <div class="indirizzo-testo" style="font-size: 1.7vh; margin-top: 0.5vh;">Via Goito, 3g</div>
+                </div>
+              </div>
+              <div class="telefono">
+                <div class="telefono-icona"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg></div>
+                <div class="telefono-testo">051 262808</div>
+              </div>
+              <div class="orari">
+                <div class="orari-icona"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div>
+                <div class="orari-testi">
+                  <div class="orari-testo">LUNEDI-VENERDI</div>
+                  <div class="orari-testo" style="margin-top: 0.5vh; text-align: center;">7PM-12AM</div>
+                </div>
+                <div class="orari-testi" style="margin-left: 1vh;">
+                  <div class="orari-testo" style="margin-top: 3.9vh;">SABATO-DOMENICA</div>
+                  <div class="orari-testo" style="margin-top: 0.5vh; text-align: center;">12PM-3PM</div>
+                  <div class="orari-testo" style="margin-top: 1vh; text-align: center;">7PM-12AM</div>
+                </div>
+              </div>
             </div>
         </div>
         <div class="map-container">
