--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
-    <script type="text/javascript" src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"rel="stylesheet">
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 
 <body>
@@ -21,39 +21,39 @@
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" href="">Home<a>
-                        <a data_translate="Menù" class="elemento-lista" href="">Menù<a>
-                                <a data_translate="About Us" class="elemento-lista" href="">La nostra storia<a>
-                                        <a data_translate="Gallery" class="elemento-lista" href="">Gallery<a>
-                                                <a data_translate="Contact Us" class="elemento-lista" style ="color: #5C6B5F;" href="">Contatti<a>
+                        <a data-translate="Menù" class="elemento-lista" href="">Menù<a>
+                                <a data-translate="About Us" class="elemento-lista" href="">La nostra storia<a>
+                                        <a data-translate="Gallery" class="elemento-lista" href="">Gallery<a>
+                                                <a data-translate="Contact Us" class="elemento-lista" style ="color: #5C6B5F;" href="">Contatti<a>
             </ul>
         </div>
 
         <div class="lingua">
-            <input type="button" value="EN" class="button" id="en" onclick="translatePage()"> <input type="button" value="IT" class="button" id="it">
+            <input type="button" value="EN" class="button" id="en"> <input type="button" value="IT" class="button" id="it">
         </div>
         
       </div>
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
-        <div class="sottotitolo">Contatti</div>
+        <div data-translate="Contacts" class="sottotitolo">Contatti</div>
         <div class="sottotitolo-ovale"></div>
         <div> <img class="freccia" src="./Assets/Images/freccia.png"> </div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
 
     <div class="location">
-      <div class="location-text">
-          GOITO
-      </div>
-      <div class="location-text">
-          MASSARENTI
-      </div>
-      <div class="location-text">
-          LAURA BASSI
-      </div>
-  </div>
+        <div class="location-text" id="goito">
+            GOITO
+        </div>
+        <div class="location-text" id="massarenti">
+            MASSARENTI
+        </div>
+        <div class="location-text" id="laurabassi">
+            LAURA BASSI
+        </div>
+    </div>
 
-    <div class="info-location">
+    <div class="info-location" id="infos" hidden>
         <div class="sub-info-container">
             <div class="image-container">
                 <section id="main-carousel" class="splide" aria-label="My Awesome Gallery">
@@ -72,36 +72,37 @@
                     </div>
                   </section>
             </div>
-            <div class="contacts-container">
-              <div class="Title">Pizzeria a Bologna Goito</div>
-              <div class="address">
-                <div class="addr-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pinned"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0"/><circle cx="12" cy="8" r="2"/><path d="M8.835 14H5a1 1 0 0 0-.9.7l-2 6c-.1.1-.1.2-.1.3 0 .6.4 1 1 1h18c.6 0 1-.4 1-1 0-.1 0-.2-.1-.3l-2-6a1 1 0 0 0-.9-.7h-3.835"/></svg></div>
-                <div class="addr-text"><b>Bologna, Italia</b><br>Via Goito 3g</div>
-              </div>
-              <div class="phone">
-                <div class="phone-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg></div>
-                <div class="phone-text">051 262808</div>
-              </div>
-              <div class="opening-time">
-                <div class="time-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div>
-                <div class="time-text"><b>Pranzo:</b><br>Sabato e domenica dalle 12 alle 15 <br><br><b>Cena:</b><br>Tutti i giorni dalle 19 alle 24 </div>
-              </div>
-              <div class="button-"></div>
-          </div>
+              <div class="contacts-container" >
+                <div data-translate="Bologna Goito" class="Title" id="title">Pizzeria a Bologna Goito</div>
+                <div class="address">
+                  <div class="addr-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pinned"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0"/><circle cx="12" cy="8" r="2"/><path d="M8.835 14H5a1 1 0 0 0-.9.7l-2 6c-.1.1-.1.2-.1.3 0 .6.4 1 1 1h18c.6 0 1-.4 1-1 0-.1 0-.2-.1-.3l-2-6a1 1 0 0 0-.9-.7h-3.835"/></svg></div>
+                  <div class="addr-text" id="addr-text"><b>Bologna, Italia</b><br>Via Goito 3g</div>
+                </div>
+                <div class="phone">
+                  <div class="phone-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg></div>
+                  <div class="phone-text" id="phone-text">051 262808</div>
+                </div>
+                <div class="opening-time">
+                  <div class="time-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div>
+                  <div data-translate="<b>Lunch:</b><br>Saturday and Sunday from 12 am to 3 pm<br><br><b>Dinner:</b><br>Every day from 7 pm to 12 pm" class="time-text" id="time-text"><b>Pranzo:</b><br>Sabato e domenica dalle 12 alle 15 <br><br><b>Cena:</b><br>Tutti i giorni dalle 19 alle 24 </div>
+                </div>
+                <div class="button-"></div>
+            </div>
+        </div>
         <div class="map-container">
-
-      </div>
+          <iframe width="100%" height="100%" style="Border:0" load="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe6c22fnVf0cRNpLm8CTLjho&key=AIzaSyAvQkO9_MgXl9mb_TQHjsnP_NqJfs3qYdQ" id="mapemb"></iframe>
+        </div>
 
     </div>
 </body>
 <script>
     document.addEventListener( 'DOMContentLoaded', function() {
       var splide = new Splide( '#main-carousel',{
-        arrowPath: ''
+        type    : 'loop',
       } );
       splide.mount();
     } );
 
   </script>
+  <script type="text/javascript" src="./script.js"></script>
 </html>
-
