--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" href="">Home<a>
-                        <a data-translate="Menù" class="elemento-lista" href="">Menù<a>
-                                <a data-translate="About Us" class="elemento-lista" href="">La nostra storia<a>
-                                        <a data-translate="Gallery" class="elemento-lista" href="">Gallery<a>
-                                                <a data-translate="Contact Us" class="elemento-lista" style ="color: #5C6B5F;" href="">Contatti<a>
+                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" href=""><a>
+                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""><a>
+                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""><a>
+                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" style ="color: #5C6B5F;" href=""><a>
             </ul>
         </div>
 
@@ -35,7 +35,7 @@
       </div>
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
-        <div data-translate="Contacts" class="sottotitolo">Contatti</div>
+        <div data-translate="Contacts" data-translateIt="Contatti" class="sottotitolo"></div>
         <div class="sottotitolo-ovale"></div>
         <div> <img class="freccia" src="./Assets/Images/freccia.png"> </div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
@@ -60,20 +60,20 @@
                     <div class="splide__track">
                       <ul class="splide__list">
                         <li class="splide__slide">
-                          <img src="./Assets/Images/Goito1.jpg" alt="">
+                          <img id="im1" src="" alt="">
                         </li>
                         <li class="splide__slide">
-                          <img src="./Assets/Images/Goito2.jpg" alt="">
+                          <img id="im2"  src="" alt="">
                         </li>
                         <li class="splide__slide">
-                          <img src="./Assets/Images/Goito3.jpg" alt="">
+                          <img id="im3" src="" alt="">
                         </li>
                       </ul>
                     </div>
                   </section>
             </div>
               <div class="contacts-container" >
-                <div data-translate="Bologna Goito" class="Title" id="title">Pizzeria a Bologna Goito</div>
+                <div data-translate="" data-translateIt="" class="Title" id="title"></div>
                 <div class="address">
                   <div class="addr-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pinned"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0"/><circle cx="12" cy="8" r="2"/><path d="M8.835 14H5a1 1 0 0 0-.9.7l-2 6c-.1.1-.1.2-.1.3 0 .6.4 1 1 1h18c.6 0 1-.4 1-1 0-.1 0-.2-.1-.3l-2-6a1 1 0 0 0-.9-.7h-3.835"/></svg></div>
                   <div class="addr-text" id="addr-text"><b>Bologna, Italia</b><br>Via Goito 3g</div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="opening-time">
                   <div class="time-icon"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg></div>
-                  <div data-translate="<b>Lunch:</b><br>Saturday and Sunday from 12 am to 3 pm<br><br><b>Dinner:</b><br>Every day from 7 pm to 12 pm" class="time-text" id="time-text"><b>Pranzo:</b><br>Sabato e domenica dalle 12 alle 15 <br><br><b>Cena:</b><br>Tutti i giorni dalle 19 alle 24 </div>
+                  <div data-translate="<b>Lunch:</b><br>Saturday and Sunday from 12 am to 3 pm<br><br><b>Dinner:</b><br>Every day from 7 pm to 12 pm" data-translateIt="<b>Pranzo:</b><br>Sabato e domenica dalle 12 alle 15 <br><br><b>Cena:</b><br>Tutti i giorni dalle 19 alle 24" class="time-text" id="time-text"> </div>
                 </div>
                 <div class="button-"></div>
             </div>
