privacy and cookie policy

--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,24 @@
         </div>
 
     </div>
+    <footer>
+      <div class="informative">
+        <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+        |
+        <a href="https://www.iubenda.com/privacy-policy/23582678/cookie-policy" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+        |
+        Pizza Span S.r.l.s
+        |
+        Via Salita Arenella,43
+        |
+        80129
+        |
+        Napoli
+      </div>
+      <div class="piva">
+       P.Iva: 10032741216
+      </div>
+    </footer>
 </body>
   <script type="text/javascript" src="./script.js"></script>
 </html>
