--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             LAURA BASSI
         </div>
     </div>
-
+    <section id="info-sect">
     <div class="info-location" id="infos" hidden>
         <div class="sub-info-container">
             <div class="image-container">
@@ -94,6 +94,7 @@
         </div>
 
     </div>
+  </section>
     <footer>
       <div class="informative">
         <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
