--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" href="">Home<a>
-                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" href=""><a>
-                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""><a>
-                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""><a>
-                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" style ="color: #5C6B5F;" href=""><a>
+                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" href=""></a>
+                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""></a>
+                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""></a>
+                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" style ="color: #5C6B5F;" href=""></a>
             </ul>
         </div>
 
