--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="header">
+      <div class="header">
         <div class="logo">
           <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
         </div>
@@ -21,18 +21,17 @@
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" href="">Home<a>
-                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" style ="color: #5C6B5F;"href=""><a>
-                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""><a>
-                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""><a>
-                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" href=""><a>
+                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" style ="color: #5C6B5F;"href=""></a>
+                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""></a>
+                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""></a>
+                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" href=""></a>
             </ul>
         </div>
 
         <div class="lingua">
             <input type="button" value="EN" class="button" id="en"> <input type="button" value="IT" class="button" id="it">
-        </div>
-        
-    </div>
+        </div>  
+      </div>
     <div class="container-immagine">
         <div class="text-image">SPAN</div>
         <div data-translate="Menù" data-translateIt="Menù" style="margin-left: 2vh;" class="sottotitolo"></div>
@@ -60,5 +59,5 @@
       </div>
     </footer>
 </body>
-  <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="./script1.js"></script>
 </html>
