--- a/menu.html
+++ b/menu.html
@@ -40,6 +40,15 @@
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
 
+    <div class="menu-container">
+      <div class="titolo-menu-ovale"></div>
+      <div class="titolo-menu">Antipasti</div>
+      <div class="antipasti-container">
+        <div class="antipasto-didascalia" ><img class="antipasto" style="margin-left: 5vh;" src="./Assets/Images/montanare.jpg"> TRIS DI MONTANARINE</div>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp"></div>
+      </div>
+    </div>
+
     <footer>
       <div class="informative">
         <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
