--- a/menu.html
+++ b/menu.html
@@ -44,8 +44,29 @@
       <div class="titolo-menu-ovale"></div>
       <div class="titolo-menu">Antipasti</div>
       <div class="antipasti-container">
-        <div class="antipasto-didascalia" ><img class="antipasto" style="margin-left: 5vh;" src="./Assets/Images/montanare.jpg"> TRIS DI MONTANARINE</div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp"></div>
+        <div class="antipasto-didascalia" ><img class="antipasto" src="./Assets/Images/montanare.jpg"> TRIS DI MONTANARINE €10 <br>
+        <span class="descrizione">pomodorino cotto, mozzarella e basilico <br> genovese napoletana, pecorino e basilico <br> ragù napoletano, grana e basilico</span>
+        </div>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp"> PIZZA AL TEGAMINO €13 <br>
+          <span class="descrizione">spalla cotta Capitelli, carciofini grigliati <br> e scaglie di pecorino toscano al ginepro <br> ragù napoletano, parmigiano e basilico <br> genovese napoletana, carne sfilacciata <br> pecorino e basilico</span>
+        </div>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/bomba.jpg"> LA BOMBA €10 <br>
+          <span class="descrizione">burratina 125 gr. in doppia panatura panko, <br> ripiena con pesto di pistacchi, <br> su pomodorini cotti e basilico</span>
+        </div>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/frittura.jpg"> FRITTURA NAPOLETANA <br>
+          <span class="descrizione">mozzarella in carrozza con panatura corn <br> flakes frittatina di bucatini, <br>macinato di bovino*, piselli* e besciamella <br> crocchè di patate, provola, patate, <br> grana e basilico <br> x1 (3pz.) € 5 x2 (6pz.) € 10</span>
+        </div>
+      </div>
+      <div class="antipasti-container">
+        <div class="antipasto-didascalia" ><img class="antipasto" src="./Assets/Images/vegetariano.webp"> PIATTO VEGETARIANO €12 <br>
+          <span class="descrizione">parmigiana di zucca, <br> tortino di scarola, uvetta, pinoli e<br> olive taggiasche <br> gateau di patate con provola,<br> grana e basilico</span>
+        </div>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/caprese.jpg"> CAPRESE 10€ <br>
+        <span class="descrizione">mozzarella di bufala da 125 gr. <br> cuore di bue, origano, olio evo e basilico</span>
+        </div>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/fresella.avif"> LA FRESELLA €12 <br>
+          <span class="descrizione">ciambella di grano duro con pomodorini <br> bocconcini di bufala 125 gr. <br> alici di Cetara <br> olive taggiasche, olio evo e basilico </span>
+        </div>
       </div>
     </div>
 
