--- a/menu.html
+++ b/menu.html
@@ -44,13 +44,13 @@
       <div class="titolo-menu-ovale"></div>
       <div class="titolo-menu">Antipasti</div>
       <div class="antipasti-container">
-        <div class="antipasto-didascalia" ><img class="antipasto" src="./Assets/Images/montanare.jpg"> TRIS DI MONTANARINE €10 <br>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/montanare.jpg"> TRIS DI MONTANARINE <div class="prezzo">€10,00</div> <br>
         <span class="descrizione">pomodorino cotto, mozzarella e basilico <br> genovese napoletana, pecorino e basilico <br> ragù napoletano, grana e basilico</span>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp"> PIZZA AL TEGAMINO €13 <br>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp"> PIZZA AL TEGAMINO <div class="prezzo">€13,00</div> <br>
           <span class="descrizione">spalla cotta Capitelli, carciofini grigliati <br> e scaglie di pecorino toscano al ginepro <br> ragù napoletano, parmigiano e basilico <br> genovese napoletana, carne sfilacciata <br> pecorino e basilico</span>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/bomba.jpg"> LA BOMBA €10 <br>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/bomba.jpg"> LA BOMBA <div class="prezzo">€10,00</div> <br>
           <span class="descrizione">burratina 125 gr. in doppia panatura panko, <br> ripiena con pesto di pistacchi, <br> su pomodorini cotti e basilico</span>
         </div>
         <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/frittura.jpg"> FRITTURA NAPOLETANA <br>
@@ -58,15 +58,16 @@
         </div>
       </div>
       <div class="antipasti-container">
-        <div class="antipasto-didascalia" ><img class="antipasto" src="./Assets/Images/vegetariano.webp"> PIATTO VEGETARIANO €12 <br>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/vegetariano.jpg"> PIATTO VEGETARIANO <div class="prezzo">€12,00</div> <br>
           <span class="descrizione">parmigiana di zucca, <br> tortino di scarola, uvetta, pinoli e<br> olive taggiasche <br> gateau di patate con provola,<br> grana e basilico</span>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/caprese.jpg"> CAPRESE 10€ <br>
-        <span class="descrizione">mozzarella di bufala da 125 gr. <br> cuore di bue, origano, olio evo e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/caprese.jpg"> CAPRESE <div class="prezzo">€10,00</div> <br>
+          <span class="descrizione">mozzarella di bufala da 125 gr. <br> cuore di bue, origano, olio evo e basilico</span>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/fresella.avif"> LA FRESELLA €12 <br>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/fresella.avif"> LA FRESELLA <div class="prezzo">€12,00</div> <br>
           <span class="descrizione">ciambella di grano duro con pomodorini <br> bocconcini di bufala 125 gr. <br> alici di Cetara <br> olive taggiasche, olio evo e basilico </span>
         </div>
+        <div class="antipasto-didascalia"></div>
       </div>
     </div>
 
