--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
         <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/bomba.jpg">LA BOMBA <div class="prezzo">€10,00</div> <br>
           <span class="descrizione">burratina 125 gr. in doppia panatura panko, <br> ripiena con pesto di pistacchi, <br> su pomodorini cotti e basilico</span>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/frittura.jpg">FRITTURA <div class="prezzo"> x1 (3pz.) €5,00 x2 (6pz.) €10,00</div><br>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/frittura.jpg">FRITTURA <div class="prezzo">(3pz.) €5,00/(6pz.) €10,00</div><br>
           <span class="descrizione">mozzarella in carrozza con panatura corn <br> flakes frittatina di bucatini, <br>macinato di bovino*, piselli* e besciamella <br> crocchè di patate, provola, patate, <br> grana e basilico</span>
         </div>
       </div>
