--- a/menu.html
+++ b/menu.html
@@ -44,28 +44,28 @@
       <div class="titolo-menu-ovale"></div>
       <div class="titolo-menu">Antipasti</div>
       <div class="antipasti-container">
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/montanare.jpg">TRIS DI MONTANARINE <div class="prezzo">€10,00</div> <br>
-        <span class="descrizione">pomodorino cotto, mozzarella e basilico <br> genovese napoletana, pecorino e basilico <br> ragù napoletano, grana e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/montanare.jpg"><div class="nome-prezzo"> <div class="nome-piatto">TRIS DI MONTANARINE</div><div class="prezzo">€10,00</div></div> <br><br>
+        <div class="descrizione">pomodorino cotto, mozzarella e basilico genovese napoletana, pecorino e basilico ragù napoletano, grana e basilico</div>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp">PIZZA AL TEGAMINO <div class="prezzo">€13,00</div> <br>
-          <span class="descrizione">spalla cotta Capitelli, carciofini grigliati <br> e scaglie di pecorino toscano al ginepro <br> ragù napoletano, parmigiano e basilico <br> genovese napoletana, carne sfilacciata <br> pecorino e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/pizzaTegamino.webp"><div class="nome-prezzo"> <div class="nome-piatto">PIZZA AL TEGAMINO</div><div class="prezzo">€13,00</div></div> <br><br>
+          <div class="descrizione">spalla cotta Capitelli, carciofini grigliati e scaglie di pecorino toscano al ginepro ragù napoletano, parmigiano e basilico genovese napoletana, carne sfilacciata pecorino e basilico</div>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/bomba.jpg">LA BOMBA <div class="prezzo">€10,00</div> <br>
-          <span class="descrizione">burratina 125 gr. in doppia panatura panko, <br> ripiena con pesto di pistacchi, <br> su pomodorini cotti e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/bomba.jpg"><div class="nome-prezzo"> <div class="nome-piatto">LA BOMBA</div><div class="prezzo">€10,00</div></div> <br><br>
+          <div class="descrizione">burratina 125 gr. in doppia panatura panko, ripiena con pesto di pistacchi, su pomodorini cotti e basilico</div>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/frittura.jpg">FRITTURA <div class="prezzo">(3pz.) €5,00/(6pz.) €10,00</div><br>
-          <span class="descrizione">mozzarella in carrozza con panatura corn <br> flakes frittatina di bucatini, <br>macinato di bovino*, piselli* e besciamella <br> crocchè di patate, provola, patate, <br> grana e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/frittura.jpg"><div class="nome-prezzo"> <div class="nome-piatto">FRITTURA</div><div class="prezzo">(3pz.) €5,00<br>(6pz.) €10,00</div></div><br>
+          <div class="descrizione">mozzarella in carrozza con panatura corn flakes frittatina di bucatini, macinato di bovino*, piselli* e besciamella crocchè di patate, provola, patate, grana e basilico</div>
         </div>
       </div>
       <div class="antipasti-container">
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/vegetariano.jpg">PIATTO VEGETARIANO <div class="prezzo">€12,00</div> <br>
-          <span class="descrizione">parmigiana di zucca, <br> tortino di scarola, uvetta, pinoli e<br> olive taggiasche <br> gateau di patate con provola,<br> grana e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/vegetariano.jpg"><div class="nome-prezzo"> <div class="nome-piatto">PIATTO VEGETARIANO</div><div class="prezzo">€12,00</div></div> <br>
+          <div class="descrizione">parmigiana di zucca, tortino di scarola, uvetta, pinoli e olive taggiasche gateau di patate con provola, grana e basilico</div>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/caprese.jpg">CAPRESE <div class="prezzo">€10,00</div> <br>
-          <span class="descrizione">mozzarella di bufala da 125 gr. <br> cuore di bue, origano, olio evo e basilico</span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/caprese.jpg"><div class="nome-prezzo"> <div class="nome-piatto">CAPRESE</div><div class="prezzo">€10,00</div></div> <br>
+          <div class="descrizione">mozzarella di bufala da 125 gr. cuore di bue, origano, olio evo e basilico</div>
         </div>
-        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/fresella.avif">LA FRESELLA <div class="prezzo">€12,00</div> <br>
-          <span class="descrizione">ciambella di grano duro con pomodorini <br> bocconcini di bufala 125 gr. <br> alici di Cetara <br> olive taggiasche, olio evo e basilico </span>
+        <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/fresella.avif"><div class="nome-prezzo"> <div class="nome-piatto">LA FRESELLA</div><div class="prezzo">€12,00</div></div> <br>
+          <div class="descrizione">ciambella di grano duro con pomodorini bocconcini di bufala 125 gr. alici di Cetara olive taggiasche, olio evo e basilico </div>
         </div>
         <div class="antipasto-didascalia"></div>
       </div>
