--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+  <div class="parte-invariata">
       <div class="header">
         <div class="logo">
           <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
@@ -21,10 +23,10 @@
         <div class="nav-bar">
             <ul>
                 <a class="elemento-lista" href="">Home<a>
-                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" style ="color: #5C6B5F;"href=""></a>
+                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" style ="color: #5C6B5F;" href="./menu.html"></a>
                                 <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href=""></a>
                                         <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href=""></a>
-                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" href=""></a>
+                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" href="./contact.html"></a>
             </ul>
         </div>
 
@@ -39,7 +41,7 @@
         <div> <img class="freccia" src="./Assets/Images/freccia.png"> </div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
-
+  </div>
     <div class="menu-container">
       <div class="titolo-menu-ovale"></div>
       <div class="titolo-menu">Antipasti</div>
