--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+  <div class="parte-invariata">
     <div class="header">
         <div class="logo">
           <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
@@ -40,7 +42,7 @@
         <div> <img class="freccia" src="./Assets/Images/freccia.png"> </div>
         <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
-
+  </div>
     <div class="location">
         <div class="location-text" id="goito">
             GOITO
