--- a/menu.html
+++ b/menu.html
@@ -43,8 +43,7 @@
     </div>
   </div>
     <div class="menu-container">
-      <div class="titolo-menu-ovale"></div>
-      <div class="titolo-menu">Antipasti</div>
+      <div class="titolo-menu-ovale">Antipasti</div>
       <div class="antipasti-container">
         <div class="antipasto-didascalia"><img class="antipasto" src="./Assets/Images/montanare.jpg"><div class="nome-prezzo"> <div class="nome-piatto">TRIS DI MONTANARINE</div><div class="prezzo">€10,00</div></div>
         <div class="descrizione">pomodorino cotto, mozzarella e basilico genovese napoletana, pecorino e basilico ragù napoletano, grana e basilico</div>
